setting effect image

--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
         </div>
         <div class="character-block">
           <img src="image/hero.png" class="character-image hero-image">
-          <img src="" class="effect-image" style="display: none">
-          <span class="hert-text"></span>
+          <img class="effect-image" style="display: none">
+          <span class="hurt-text"></span>
         </div>
       </div>
       <div id="monster-image-block">
         <div class="character-block">
           <img src="image/monster.png" class="character-image monster-image">
-          <span class="hert-text"></span>
+          <img class="effect-image" style="display: none">
+          <span class="hurt-text"></span>
         </div>
       </div>
     </div>
