--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         <h2> 你輸掉了! </h2>
         <button onclick="location.reload();"> 再次挑戰? </button>
       </div>
+      <div class="draw-dialog">
+        <h2> 平手! </h2>
+        <button onclick="location.reload();"> 再次挑戰? </button>
+      </div>
     </div>
   </div>
   <script src="js/index.js"></script>
