create heal skill

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <div id="hero-image-block">
         <div class="skill-block">
           <img id="skill" class="skill-image" src="image/skill.png">
+          <img id="heal" class="skill-image" src="image/heal.png">
         </div>
         <div class="character-block">
           <img src="image/hero.png" class="character-image hero-image">
