--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <img src="image/hero.png" class="character-image hero-image">
           <img class="effect-image" style="display: none">
           <span class="hurt-text"></span>
+          <img class="healeffect-image" style="display: none">
           <span class="heal-text"></span>
         </div>
       </div>
